Fix width of icons on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,12 @@ section.join ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  max-height: 32px;
+}
+
+@media (min-width: 568px) {
+  section.join ul {
+    max-height: 32px;
+  }
 }
 
 section.join ul li {
